[package]
name = "revoker"
version = "2.0.0"
edition = "2021"
description = "A CLI application for revoking Twitch OAuth tokens."
license = "MPL-2.0"
keywords = ["twitch", "cli", "oauth"]
repository = "https://github.com/treuks/revoker"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attohttpc = { version = "0.26.1", features = ["basic-auth"] }
miniserde = "0.1"